// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createConventionalChangelogHeader > default 1`] = `
[
  "<!-- version:1.0.0 -->",
  "## 1.0.0 (2000-02-23)",
  "",
]
`;

exports[`createConventionalChangelogHeader > with compare URL 1`] = `
[
  "<!-- version:1.0.0 -->",
  "## 1.0.0 (2000-02-23)",
  "",
  "[Compare changes](https://example.com)",
  "",
]
`;
